Fixes spacing

--- a/app/javascript/components/Intro.css
+++ b/app/javascript/components/Intro.css
@@ -7,6 +7,7 @@
   --height: 250px;
 
   height: var(--height);
+  margin-top: var(--gutter-size);
 }
 
 .Intro__item {
